[metadata]
name = napari-stress
version = 0.0.21
author = Johannes Müller, Ben J. Gross, Robert Haase, Elijah Shelton, Carlos Gomez, Otger Campas
author_email = johannes_richard.mueller@tu-dresden.de

license = BSD-3-Clause
description = Interactive surface analysis in napari for measuring mechanical stresses in biological tissues
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
project_urls =
    Bug Tracker = https://github.com/BiAPoL/napari-stress/issues
    Documentation = https://biapol.github.io/napari-stress
    Source Code = https://github.com/BiAPoL/napari-stress
    User Support = https://github.com/BiAPoL/napari-stress/issues


[options]
packages = find:
python_requires = >=3.8
package_dir =
    =src
include_package_data = True

# add your package requirements here
install_requires =
    numpy
    vedo==2022.3.0
    napari
    vispy
    matplotlib
    tqdm
    scipy
    pandas
    scikit-image
    napari-tools-menu>=0.1.15
    napari-process-points-and-surfaces>=0.3.0
    aicsimageio
    napari_segment_blobs_and_things_with_membranes
    mpmath
    pyshtools<=4.10.0
    napari-matplotlib

[options.packages.find]
where = src

[options.package_data]
napari-stress =
    napari.yaml

[options.entry_points]
napari.plugin =
    napari-stress = napari_stress._napari_plugin
