[metadata]
name = napari_stress
version = 0.2.2
description = Interactive surface analysis in napari for measuring mechanical stresses in biological tissues
long_description = file: README.md
long_description_content_type = text/markdown
author = Johannes Müller, Ben J. Gross, Elijah Shelton, Carlos Gomez, Otger Campas
author_email = johannes_richard.mueller@tu-dresden.de
license = BSD-3-Clause
license_file = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Testing
project_urls =
    Bug Tracker = https://github.com/campaslab/napari-stress/issues
    Documentation = https://campaslab.github.io/napari-stress
    Source Code = https://github.com/campaslab/napari-stress
    User Support = https://github.com/campaslab/napari-stress/issues

[options]
packages = find:
install_requires =
    dask
    distributed
    joblib
    matplotlib
    mpmath
    napari
    napari-matplotlib
    napari-process-points-and-surfaces>=0.4.0
    napari-segment-blobs-and-things-with-membranes
    napari-tools-menu>=0.1.15
    numpy<1.24.0
    pandas
    pyclesperanto-prototype
    pygeodesic
    pyocclient
    pyshtools<=4.10.0
    scikit-image
    scipy
    seaborn
    tqdm
    vedo>=2023.4.3
    vispy
python_requires = >=3.7
include_package_data = True
package_dir =
    =src

[options.packages.find]
where = src

[options.entry_points]
napari.plugin =
    napari-stress = napari_stress._napari_plugin

[options.package_data]
napari_stress =
    napari.yaml
